// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de Citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1705098870386,
      "mascota": "New Minino",
      "propietario": "New Eder",
      "sintomas": "Solo duerme",
      "telefono": "123456789",
    },
  ],
}
`;

exports[`Probar la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2024",
      "hora": "10:30",
      "id": 1705098870386,
      "mascota": "Minino",
      "propietario": "Eder",
      "sintomas": "Solo duerme",
      "telefono": "123456789",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;

exports[`Probar la clase de Citas Mostrar un mensaje de error cuando no hay citas 1`] = `Array []`;
